PR fixes for .yxt-card--isVisibleOnMobileMap

--- a/static/scss/answers/interactive-map/InteractiveMap.scss
+++ b/static/scss/answers/interactive-map/InteractiveMap.scss
@@ -525,7 +525,7 @@
     }
   }
 
-  .yxt-Card--copy {
+  .yxt-Card--isVisibleOnMobileMap {
     transition: height 0.3s ease-out;
   }
 
